tests/negative/import_show2_b.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.

b:
  return "b"
